[package]
name = "desdev"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
egui_extras = { version = "0.35.0", features = ["default", "image"] }
env_logger = { version = "0.11.11", features = ["auto-color", "humantime"] }
lazy_static = "1.5.0"
log = "0.4.33"
lucide-icons = "1.22.0"
pest = "2.8.7"
pest_derive = "2.8.7"
rand = "0.10.1"
